tests/typing/bad/testfile-context_while-1.scala
class A { def m() { while(true) { var i = 0 }; i = 1 } }
object Main { def main(args: Array[String]) { } }
